# prof_test_kubsau

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  sql_app.db
.github/workflows/: backend.yml  docker-build.yml  frontend.yml  main.yml  python-app.yml
backend/: .env  Dockerfile  docker-compose.yml  main.py  server.py
backend/modules/: api_test.py  database.py  models.py  schemas.py
backend/src/: __init__.py  config.py  main.py
backend/src/applicants/: routes.py  schemas.py  service.py
backend/src/database/: database.py  main.py  models.py
backend/src/tests/: conftest.py  factories.py  test_applicants.py  test_exams.py  test_routes.py  test_send_result.py  test_service.py  utils.py
backend/src/users/: routes.py
backend/tests/: factories.py  test_send_result.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/App/: App.tsx
frontend/src/App/pages/: index.ts
frontend/src/api/: api.ts  api.tsx  types.ts
frontend/src/app/: App.tsx
frontend/src/assets/: logo.tsx
frontend/src/components/Layout/: Layout.module.css  Layout.tsx
frontend/src/pages/main-page/: main-page.module.css  main-page.tsx
frontend/src/pages/tests-page/: tests-page.module.css  (+1 more)
frontend/src/styles/: styles.css
prof_test_kubsau/: database.py  schemas.py  server.py  sql_app.db  test.py
prof_test_kubsau/public/: main.html  results.html  test.html
prof_test_kubsau/tests/: factories.py  test_cringe.py  test_send_result.py  utils.py
(+8 files in other folders)
