[tool.poetry]
name = "prof-test-kubsau"
version = "0.1.0"
description = ""
authors = ["Sharapatov Nikita <neffshar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
flake8 = "^7.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
